fixing the provider issue

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "LaraCare\\CvAgent\\CvAgentProvider"
+                "LaraCare\\CvAgent\\\\CvAgentProvider"
             ]
         }
     },
