--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,6 @@
             "homepage": "https://jery-portal.vrecel.app/"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/LaraCare/cv-agent"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "LaraCare\\CvAgent\\": "src/"
@@ -35,7 +29,8 @@
         }
     },
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "google-gemini-php/client": "^2.5"
     },
     "require-dev": {},
     "minimum-stability": "dev",
